// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <DrilldownLink
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    className="overview-measures-value text-light"
    component="my-project"
    metric="sqale_index"
  >
    work_duration.x_minutes.1
  </DrilldownLink>
  <span
    className="big-spacer-left"
  >
    Sqale_index
  </span>
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <DrilldownLink
    branchLike={
      Object {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": true,
        "name": "master",
      }
    }
    className="overview-measures-value text-light"
    component="my-project"
    metric="new_technical_debt"
  >
    work_duration.x_minutes.1
  </DrilldownLink>
  <span
    className="big-spacer-left"
  >
    New_technical_debt
  </span>
</Fragment>
`;

exports[`should render correctly 3`] = `
<Fragment>
  <span
    aria-label="no_data"
    className="overview-measures-empty-value"
  />
  <span
    className="big-spacer-left"
  >
    metric.sqale_index.name
  </span>
</Fragment>
`;
